Fixes an issue where multi line truncated in `Text` was not being applied (#1994)
<!--
  How to write a good PR title:
- Follow [the Conventional Commits
specification](https://www.conventionalcommits.org/en/v1.0.0/).
  - Give as much context as necessary and as little as possible
  - Prefix it with [WIP] while it’s a work in progress
-->

## Self Checklist

- [x] I wrote a PR title in **English** and added an appropriate
**label** to the PR.
- [x] I wrote the commit message in **English** and to follow [**the
Conventional Commits
specification**](https://www.conventionalcommits.org/en/v1.0.0/).
- [x] I [added the
**changeset**](https://github.com/changesets/changesets/blob/main/docs/adding-a-changeset.md)
about the changes that needed to be released. (or didn't have to)
- [x] I wrote or updated **documentation** related to the changes. (or
didn't have to)
- [x] I wrote or updated **tests** related to the changes. (or didn't
have to)
- [x] I tested the changes in various browsers. (or didn't have to)
  - Windows: Chrome, Edge, (Optional) Firefox
  - macOS: Chrome, Edge, Safari, (Optional) Firefox

## Summary
<!-- Please brief explanation of the changes made -->

Fixes an issue where multi line truncated in `Text` was not being
applied

## Details
<!-- Please elaborate description of the changes -->

- typography size mixin 마이그레이션을 잘못하여 multi-line truncated가 제대로 동작하지 않는
문제를 수정합니다. mixin에 매개변수를 추가하여 css variable을 지정할 수 있는 기능을 추가했습니다.
- 해당 케이스에 대한 스토리북을 강화합니다.

### Breaking change? (Yes/No)
<!-- If Yes, please describe the impact and migration path for users -->

No

--- a/packages/bezier-react/src/components/Text/Text.module.scss
+++ b/packages/bezier-react/src/components/Text/Text.module.scss
@@ -5,11 +5,16 @@ $typo-sizes: 11, 12, 13, 14, 15, 16, 17, 18, 22, 24, 30, 36;
 .Text {
   --b-text-color: inherit;
   --b-text-line-clamp: 1;
+  --b-text-line-height: initial;
+  --b-text-font-size: initial;
+  --b-text-letter-spacing: initial;
 
+  font-size: var(--b-text-font-size);
   font-weight: var(--font-weight-400);
   font-style: normal;
+  line-height: var(--b-text-line-height);
   color: var(--b-text-color);
-  transition: color var(--transition-s);
+  letter-spacing: var(--b-text-letter-spacing);
 
   &:where(.bold) {
     font-weight: var(--font-weight-700);
@@ -52,7 +57,12 @@ $typo-sizes: 11, 12, 13, 14, 15, 16, 17, 18, 22, 24, 30, 36;
 
   @each $size in $typo-sizes {
     &:where(.typo-#{$size}) {
-      @include typography.size($size);
+      @include typography.size(
+        $size,
+        "b-text-font-size",
+        "b-text-line-height",
+        "b-text-letter-spacing",
+      );
     }
   }
 }
